# cpp-cmake-template

./: .gitignore  CMakeLists.txt  CmakePresets.json  LICENSE  README.md
Source/: CMakeLists.txt  main.cpp
